<resources>

    <!--<string name="google_client_id">230219820111-dmechksjcf0bfusru5gru02klel3i55d.apps.googleusercontent.com</string>-->
    <string name="google_client_id">230219820111-69tifv19m2h5hrpma9urc66lc6d7uq6p.apps.googleusercontent.com</string>

    <!-- ==============================FONT====================================== -->
    <string name="regular">Montserrat-Regular.ttf</string>
    <string name="bold">Montserrat-Bold.ttf</string>
    <string name="light">Montserrat-Light.ttf</string>
    <string name="medium">Montserrat-Medium.ttf</string>
    <!-- ==============================FONT====================================== -->

    <string name="app_name">on-demand-youtube-player</string>
    <string name="please_choose_favorite_topics">Please choose your favorite topics</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="get_started">Get Started</string>
    <string name="home">Home</string>
    <string name="my_playlist">My Playlist</string>
    <string name="menu">Menu</string>
    <string name="search_youtube_video">Search Youtube Videos</string>
    <string name="create_new_playlist">Create New Playlist</string>
    <string name="new_playlist">New Playlist</string>
    <string name="title">Title</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_new_account">Create New Account</string>
    <string name="or">Or</string>
    <string name="sign_in_with_fb">Sign in with Facebook</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="forgot">Forgot?</string>
    <string name="login_with_fb">Login with Facebook</string>
    <string name="do_not_have_an_account">"Don't have an account?"</string>
    <string name="sign_in">Sign in</string>
    <string name="submit">Submit</string>
    <string name="enter_your_email">"Enter your email and we'll send to you the link to reset the password."</string>
    <string name="password_recovery">Password Recovery</string>
    <string name="recently_played">Recently played</string>
    <string name="more">More</string>
    <string name="playlist_a_z">Playlist (A-Z)</string>
    <string name="settings">Settings</string>
    <string name="play_all">Play all</string>
    <string name="upnext">Upnext</string>
    <string name="autoplay">Autoplay</string>
    <string name="default_timer">Default timer</string>
    <string name="input_new_timer">Input new timer</string>
    <string name="previous_added_timer">Previous added timer</string>
    <string name="start">Start</string>
    <string name="restart">Restart</string>
    <string name="p_30">"30'"</string>
    <string name="p_60">"60'"</string>
    <string name="p_90">"90'"</string>
    <string name="p_120">"120'"</string>
    <string name="audio_and_headphone">Audio &amp; Headphone</string>
    <string name="automatically_play_audio">Automatically play audio</string>
    <string name="pause_on_headset_disconnect">Pause on headset disconnect</string>
    <string name="resume_on_headset_connect">Resume on headset connect</string>
    <string name="app_info">App info</string>
    <string name="about_us">About us</string>
    <string name="lorem_ipsum_dolor">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.</string>
    <string name="app_version">App Version</string>
    <string name="app_rating">App Rating</string>
    <string name="videos">videos</string>
    <string name="years_ago">years ago</string>
    <string name="days_ago">days ago</string>
    <string name="today">today</string>
    <string name="views">views</string>
    <string name="favorite_songs">Favorite Songs</string>
    <string name="log_out">Sign out</string>

    <!-- action labels  -->
    <string name="action_play">Play</string>
    <string name="action_pause">Pause</string>
    <string name="action_previous">Previous</string>
    <string name="action_next">Next</string>

    <string name="toast_message_playing">Playing: %1$s</string>
    <string name="toast_message_error_extracting">Error Extracting Audio: %1$s</string>
    <string name="toast_message_error_playing_url">Error URL Protected: %1$s</string>
    <string name="fragment_tab_favorites">Favorites</string>

    <!-- Notification Channel -->
    <string name="notification_channel">YIB_Channel_ID</string>
    <string name="notification_channel_description">Channel ID for YIB</string>


    <!-- Errors -->
    <string name="error_no_yt_link">Not a valid YouTube link</string>
    <string name="error_no_yt_video_retrieve">Error Loading YouTube link</string>
    <string name="error_no_connection">Cannot connect to server. Please, check your Internet connectivity.</string>
    <string name="error_loading_media">Error Loading Media</string>


    <string name="skip_next">skip to next</string>
    <string name="skip_prev">skip to previous</string>
    <string name="play_pause">play or pause</string>
    <string name="currently_playing">YouTube Video currently playing</string>
    <string name="currently_playing_views_number">Artist of currently playing song</string>
    <string name="currently_playing_extra_info">Extra info for currently playing song</string>
    <string name="loading">Loading…</string>
    <string name="video_thumbnail">Video Thumbnail</string>
</resources>
