<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/d20">

    <com.vcoders.on_demand_youtube_player.customView.TextViewPlus
        style="@style/TextSize_15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_playlist"
        android:textColor="@color/white"
        android:textSize="@dimen/d18" />

    <com.vcoders.on_demand_youtube_player.customView.TextViewPlus
        style="@style/TextSize_15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/d30"
        android:background="@null"
        android:hint="@string/title" />

    <LinearLayout
        style="@style/line"
        android:layout_width="match_parent"
        android:layout_height="@dimen/d1"
        android:layout_marginTop="@dimen/d5" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/d50"
        android:gravity="right"
        android:orientation="horizontal">

        <com.vcoders.on_demand_youtube_player.customView.TextViewPlus
            style="@style/TextSize_15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textSize="@dimen/d16" />

        <com.vcoders.on_demand_youtube_player.customView.TextViewPlus
            style="@style/TextSize_15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/d30"
            android:text="@string/ok"
            android:textColor="@color/gray_line"
            android:textSize="@dimen/d16" />
    </LinearLayout>
</LinearLayout>
