<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:foo="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.vcoders.on_demand_youtube_player.features.passwordRecovery.PasswordRecoveryActivity">

    <include
        android:id="@+id/llHeader"
        layout="@layout/layout_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/d20">

        <com.vcoders.on_demand_youtube_player.customView.TextViewPlus
            style="@style/TextSize_15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/d30"
            android:gravity="center"
            android:text="@string/enter_your_email" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/d40"
            android:background="@drawable/boder_width_1_gray_8e"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/d20">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_home" />

            <com.vcoders.on_demand_youtube_player.customView.EditTextPlus
                style="@style/TextSize_15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/d15"
                android:background="@null"
                android:hint="@string/email" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/d20"
            android:background="@drawable/bg_gradient_blue"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/d20">

            <com.vcoders.on_demand_youtube_player.customView.TextViewPlus
                style="@style/TextSize_15dp"
                foo:customFont="@string/medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:gravity="center"
                android:hint="@string/submit"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
