<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:foo="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        style="@style/line"
        android:layout_width="match_parent"
        android:layout_height="@dimen/d1"
        android:background="@color/line_onboarding" />

    <RelativeLayout
        android:paddingVertical="@dimen/d15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.vcoders.on_demand_youtube_player.customView.TextViewPlus
            android:id="@+id/txtSkip"
            style="@style/TextSize_15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingHorizontal="@dimen/d20"
            android:text="@string/skip" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/llCircle1"
                android:layout_width="@dimen/d9"
                android:layout_height="@dimen/d9"
                android:background="@drawable/circle_gray_select"
                android:orientation="horizontal" />

            <LinearLayout
                android:id="@+id/llCircle2"
                android:layout_width="@dimen/d9"
                android:layout_height="@dimen/d9"
                android:layout_marginHorizontal="@dimen/d9"
                android:background="@drawable/circle_gray_unselect"
                android:orientation="horizontal" />

            <LinearLayout
                android:id="@+id/llCircle3"
                android:layout_width="@dimen/d9"
                android:layout_height="@dimen/d9"
                android:background="@drawable/circle_gray_unselect"
                android:orientation="horizontal" />
        </LinearLayout>

        <com.vcoders.on_demand_youtube_player.customView.TextViewPlus
            android:id="@+id/txtNext"
            style="@style/TextSize_15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:paddingHorizontal="@dimen/d20"
            android:text="@string/next"
            foo:customFont="@string/medium" />
    </RelativeLayout>
</LinearLayout>